app/scss/_hero.scss
@use "variables" as v;
@use "mixins" as mx;

.hero {
  background-color: v.$veryLightGray;

  .container {
    @include mx.breakpoint-up(large) {
      display: flex;
      align-items: center;
    }
  }

  &__image {
    position: relative;
    background-image: url("/EasyBank-Project-LP---study/images/bg-intro-mobile.svg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    min-height: 17.5rem;

    &.toggle-open {
      z-index: -1;
    }

    @include mx.breakpoint-up(medium) {
      min-height: 25rem;
      background-position: center 60%;
    }

    @include mx.breakpoint-up(large) {
      flex: 3;
      order: 2;
      height: 41rem;
      background-image: none;
      //   background-image: url(/images/bg-intro-desktop.svg);
      //   background-position: left center;
    }

    &::before,
    &::after {
      //   border: 1px solid magenta;
    }

    &::before {
      @include mx.breakpoint-up(large) {
        content: "";
        position: absolute;
        height: 100%;
        background-image: url("/EasyBank-Project-LP---study/images/bg-intro-desktop.svg");
        background-repeat: no-repeat;
        background-position: center bottom;
        width: 150%;
        background-size: 122%;
        background-position: 0% 83%;
      }
    }

    &::after {
      content: "";
      position: absolute;
      width: 100%;
      height: 100%;
      background-image: url("/EasyBank-Project-LP---study/images/image-mockups.png");
      background-size: 93%;
      background-repeat: no-repeat;
      background-position: center bottom;

      @include mx.breakpoint-up(medium) {
        background-size: 52%;
      }

      @include mx.breakpoint-up(large) {
        width: 120%;
        height: 122%;
        background-size: 94%;
        background-position: center 150%;
        left: 22%;
      }
    }
  }

  &__text {
    text-align: center;

    @include mx.breakpoint-up(large) {
      flex: 2;
      order: 1;
      text-align: left;
    }
  }
}

